--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,4 +6,10 @@
     </style>
 
     <style name="Theme.TaskManager" parent="Base.Theme.TaskManager" />
+
+    <!-- Splash theme -->
+    <style name="SplashTheme" parent="Theme.Material3.DayNight.NoActionBar">
+        <!-- Customize your splash theme here. -->
+    </style>
+
 </resources>
